# cel-mapping

./: .gitignore  Cargo.toml  README.md  implementation-plan-publicschema-v0.2.md  spec-crate-split-v0.3.md  spec-publicschema-v0.2.md  spec.md
.github/workflows/: ci.yml
crates/cel-evaluator/: Cargo.toml
crates/cel-evaluator/src/: compiled.rs  errors.rs  evaluator.rs  expr.rs  lib.rs  output.rs  paths.rs
crates/cel-evaluator/tests/: standalone_bindings.rs
crates/cel-mapper-core/: Cargo.toml
crates/cel-mapper-core/src/: ast_paths.rs  budget.rs  code_system.rs  compiled.rs  compiler.rs  errors.rs  eval_ctx.rs  evaluator.rs  iso_systems.rs  lib.rs  mapping.rs  missing.rs  paths.rs  runtime.rs  security.rs
crates/cel-mapper-core/src/functions/: builtins.rs  helpers.rs  mod.rs  phone.rs
crates/cel-mapper-core/src/publicschema/: mod.rs
crates/cel-mapper-core/tests/: builtins_contracts.rs  compatibility_reexports.rs  core_contracts.rs  field_absent_semantics.rs  golden_section17.rs  iso_helpers.rs  new_helpers.rs  publicschema_fixture_corpus.rs  publicschema_parity.rs  standalone_bindings.rs
crates/cel-mapper-core/tests/fixtures/: spec_section17_source.json
crates/cel-mapper-core/tests/fixtures/publicschema-parity/: README.md  code-map-preloaded.json  explicit-source-identity.json  identity-copy.json  value-mapping-reverse-ambiguous.json
crates/cel-mapper-python/: Cargo.toml  README.md  pyproject.toml
crates/cel-mapper-python/examples/: compile_once_evaluate_many.py  error_handling.py  evaluate_expression_only.py  expression_preview_editor.py  one_shot_evaluate.py  publicschema_transform.py  register_code_system.py
crates/cel-mapper-python/python/cel_mapper/: __init__.pyi
crates/cel-mapper-python/src/: lib.rs
crates/cel-mapper-python/tests/: test_binding.py  test_publicschema.py
crates/cel-mapper-wasm/: Cargo.toml
crates/cel-mapper-wasm/src/: lib.rs
crates/crosswalk-cel/: Cargo.toml  README.md
crates/crosswalk-cel/src/: ast_paths.rs  compiled.rs  compiler.rs  errors.rs  evaluator.rs  lib.rs  missing.rs  output.rs  paths.rs
crates/crosswalk-cel/tests/: public_surface.rs  standalone_bindings.rs
crates/crosswalk-core/: Cargo.toml  README.md
crates/crosswalk-core/src/: ast_paths.rs  budget.rs  cel_scan.rs  code_system.rs  compiled.rs  compiler.rs  errors.rs  eval_ctx.rs  evaluator.rs  iso_systems.rs  lib.rs  runtime.rs  security.rs
crates/crosswalk-core/src/data/: iso3166_alpha3.yaml  iso639_3.yaml
crates/crosswalk-core/src/functions/: mod.rs
crates/crosswalk-core/src/publicschema/: mod.rs
crates/crosswalk-core/tests/: builtins_contracts.rs  compatibility_reexports.rs  core_contracts.rs  field_absent_semantics.rs  golden_section17.rs  iso_helpers.rs  new_helpers.rs  publicschema_fixture_corpus.rs  publicschema_parity.rs  standalone_bindings.rs
crates/crosswalk-core/tests/fixtures/: spec_section17_ctx.json  spec_section17_mapping.yaml
crates/crosswalk-core/tests/fixtures/publicschema-parity/: README.md  ctx-timezone.json  value-mapping-unmapped.json
crates/crosswalk-functions/: Cargo.toml  README.md
crates/crosswalk-functions-cel/: Cargo.toml  README.md
crates/crosswalk-functions-cel/src/: builtins.rs  helpers.rs  lib.rs  phone.rs
crates/crosswalk-functions-cel/tests/: adapter_contracts.rs
crates/crosswalk-functions/src/: ids.rs  json.rs  lib.rs
crates/crosswalk-functions/tests/: contracts.rs
crates/crosswalk-publicschema/: Cargo.toml  README.md
crates/crosswalk-publicschema/src/: lib.rs
crates/crosswalk-publicschema/tests/: publicschema_contracts.rs  publicschema_fixture_corpus.rs  publicschema_parity.rs
crates/crosswalk-publicschema/tests/fixtures/publicschema-parity/: missing-required-fails.json
crates/crosswalk-python/: Cargo.toml  README.md  pyproject.toml
crates/crosswalk-python/examples/: compile_once_evaluate_many.py  error_handling.py  evaluate_expression_only.py  expression_preview_editor.py  one_shot_evaluate.py  publicschema_transform.py  register_code_system.py
crates/crosswalk-python/src/: lib.rs
crates/crosswalk-python/tests/: test_binding.py  test_publicschema.py
crates/crosswalk-wasm/: Cargo.toml  README.md
crates/crosswalk-wasm/src/: lib.rs
crates/mapping-functions/: Cargo.toml
crates/mapping-functions-cel/: Cargo.toml
crates/mapping-functions-cel/src/: budget.rs  builtins.rs  eval_ctx.rs  lib.rs  output.rs  phone.rs
crates/mapping-functions-cel/tests/: adapter_contracts.rs
crates/mapping-functions/src/: codes.rs  date.rs  email.rs  phone.rs  redaction.rs  text.rs
crates/mapping-functions/src/data/: iso4217.yaml
crates/mapping-functions/tests/: contracts.rs
crates/publicschema-mapping/: Cargo.toml
crates/publicschema-mapping/src/: lib.rs
crates/publicschema-mapping/tests/: publicschema_contracts.rs  publicschema_fixture_corpus.rs  publicschema_parity.rs
crates/publicschema-mapping/tests/fixtures/publicschema-parity/: array-append.json  duplicate-target-last-write.json  formula-error-fails-closed.json  missing-optional-omits.json  wrong-direction-no-identity.json
docs/: architecture.md  crate-split-inventory.md  extension-guide.md  publicschema-celpy-behavioral-diff.md  publicschema-helper-parity.md  release-checklist.md
