[workspace]
resolver = "2"
members = [
    "crates/crosswalk-functions",
    "crates/crosswalk-functions-cel",
    "crates/crosswalk-cel",
    "crates/crosswalk-publicschema",
    "crates/crosswalk-core",
    "crates/crosswalk-wasm",
    "crates/crosswalk-python",
]
# PyO3 links libpython; keep it out of the default graph so `cargo test` works without Python dev libs.
default-members = [
    "crates/crosswalk-functions",
    "crates/crosswalk-functions-cel",
    "crates/crosswalk-cel",
    "crates/crosswalk-publicschema",
    "crates/crosswalk-core",
    "crates/crosswalk-wasm",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PublicSchema/cel-mapping"
