[package]
name = "cel-evaluator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone CEL evaluation boundary for cel-mapping"

[dependencies]
cel = { version = "0.13", features = ["json", "chrono", "regex"] }
base64 = "0.22"
mapping-functions = { path = "../mapping-functions", features = ["date", "phone", "redaction"] }
mapping-functions-cel = { path = "../mapping-functions-cel" }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
