[package]
name = "cel-mapper-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CEL-based declarative mapping runtime (spec v0.1)"

[dependencies]
cel = { version = "0.13", features = ["json", "chrono", "regex"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
uuid = { version = "1", features = ["v5", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
unicode-normalization = "0.1"
phonenumber = "0.3"

[dev-dependencies]
pretty_assertions = "1"
