[package]
name = "crosswalk-cel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone CEL evaluation boundary for crosswalk"
readme = "README.md"

[dependencies]
cel = { version = "0.13", features = ["json", "chrono", "regex"] }
base64 = "0.22"
crosswalk-functions = { version = "0.1.0", path = "../crosswalk-functions", features = ["date", "phone", "redaction"] }
crosswalk-functions-cel = { version = "0.1.0", path = "../crosswalk-functions-cel" }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
