[package]
name = "crosswalk-functions-cel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CEL adapter for deterministic mapping helper functions"

[dependencies]
cel = { version = "0.13", features = ["json", "chrono", "regex"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
hex = "0.4"
crosswalk-functions = { path = "../crosswalk-functions", features = ["date", "phone", "redaction"] }
regex = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v5", "serde"] }
