[package]
name = "crosswalk-publicschema"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PublicSchema v0.2 mapping compile and evaluation runtime"

[dependencies]
crosswalk-cel = { path = "../crosswalk-cel" }
crosswalk-functions = { path = "../crosswalk-functions", features = ["date", "phone", "redaction"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"

