[package]
name = "crosswalk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm-bindgen bindings for the Crosswalk CEL mapping runtime"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crosswalk-core = { version = "0.1.1", path = "../crosswalk-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
